go/chatxdk/include/chat_xdk.h

/**
 * Opaque handle to a Chat SDK instance.
 *
 * Created by [`chat_xdk_new`], freed by [`chat_xdk_free`].
 */
typedef struct ChatHandle ChatHandle;
/**
 * Result type returned by FFI functions.
 *
 * On success: `data` contains the result (may be NULL for void operations),
 *             `error` is NULL.
 * On error:   `data` is NULL, `error` contains the error message.
 *
 * Both fields must be freed with `chat_xdk_free_string` when non-NULL.
 */
typedef struct FfiResult {
  char *data;
  char *error;
} FfiResult;
/**
 * Create a new Chat SDK instance.
 *
 * Returns an opaque handle that must be freed with [`chat_xdk_free`].
 * Returns NULL on failure.
 */
struct ChatHandle *chat_xdk_new(void);
/**
 * Update the Juicebox configuration (e.g., to refresh auth tokens).
 */
struct FfiResult chat_xdk_update_config(struct ChatHandle *handle, const char *config_json);
/**
 * Register existing keys with Juicebox (first-time setup).
 */
struct FfiResult chat_xdk_setup(struct ChatHandle *handle,
                                const char *pin,
                                const char *config_json);
/**
 * Unlock the SDK by recovering keys from Juicebox.
 */
struct FfiResult chat_xdk_unlock(struct ChatHandle *handle,
                                 const char *pin,
                                 const char *config_json);
/**
 * Delete keys from Juicebox and clear from memory.
 */
struct FfiResult chat_xdk_delete(struct ChatHandle *handle);
/**
 * Change the PIN protecting keys in Juicebox.
 */
struct FfiResult chat_xdk_change_pin(struct ChatHandle *handle,
                                     const char *old_pin,
                                     const char *new_pin);
/**
 * Free a Chat SDK instance.
 *
 * After calling this, the handle is invalid and must not be used.
 * Passing NULL is a no-op.
 */
void chat_xdk_free(struct ChatHandle *handle);
/**
 * Free a string returned by any chat_xdk function.
 *
 * The buffer is zeroized before it is freed: some returns carry secrets
 * (e.g. exported keys), so every returned string is wiped rather than
 * deciding per call site.
 *
 * Passing NULL is a no-op.
 */
void chat_xdk_free_string(char *s);
/**
 * Check if the SDK is unlocked (both identity and signing keys loaded).
 *
 * Returns 1 if unlocked, 0 if locked, -1 if handle is NULL.
 */
int32_t chat_xdk_is_unlocked(const struct ChatHandle *handle);
/**
 * Check if the identity key is loaded (sufficient for decryption).
 *
 * Returns 1 if identity key loaded, 0 if not, -1 if handle is NULL.
 */
int32_t chat_xdk_has_identity_key(const struct ChatHandle *handle);
/**
 * Enable or disable rejection of unverified events.
 *
 * When enabled — the default — `chat_xdk_decrypt_event` returns an error for
 * any signed event whose signature cannot be verified (invalid, missing, or
 * no matching signing key) instead of returning it with `verified: false`.
 */
void chat_xdk_set_reject_unverified(struct ChatHandle *handle, int32_t reject);
/**
 * Set the session identity: the owner's user id and signing-key version,
 * used as defaults wherever a params document leaves `sender_id` /
 * `signing_key_version` unset.
 */
struct FfiResult chat_xdk_set_identity(const struct ChatHandle *handle,
                                       const char *user_id,
                                       const char *signing_key_version);
/**
 * Enable (non-zero) or disable (0) the conversation-key cache (off by
 * default).
 *
 * While enabled, `chat_xdk_decrypt_events` caches each conversation's
 * verified latest key and the encrypt functions resolve an omitted
 * `conversation_key`/`conversation_key_version` pair from it. Disabling
 * clears the cache.
 */
void chat_xdk_set_cache_keys(const struct ChatHandle *handle, int32_t enabled);
/**
 * Store signing keys used when a decrypt call passes an empty
 * `signing_keys_json`.
 *
 * `signing_keys_json` takes the same array shape as
 * `chat_xdk_decrypt_events`. Each call replaces the previous set; only this
 * call populates the store — keys carried inside events are never trusted.
 */
struct FfiResult chat_xdk_set_signing_keys(const struct ChatHandle *handle,
                                           const char *signing_keys_json);
/**
 * Lock the SDK, clearing keys from memory.
 */
void chat_xdk_lock(const struct ChatHandle *handle);
/**
 * Generate new keypairs and return the registration payload as JSON.
 *
 * Returns JSON matching `PublicKeyRegistrationPayload`.
 */
struct FfiResult chat_xdk_generate_keypairs(const struct ChatHandle *handle);
/**
 * Get the user's public keys as JSON.
 *
 * Returns JSON `{"identity":"...","signing":"...","version":"..."}`.
 */
struct FfiResult chat_xdk_get_public_keys(const struct ChatHandle *handle);
/**
 * Get the fingerprint of the loaded identity public key.
 *
 * Returns a URL-safe base64 string (SHA-256 of the SPKI-encoded key)
 * that users can compare out-of-band to verify key authenticity.
 */
struct FfiResult chat_xdk_get_public_key_fingerprint(const struct ChatHandle *handle);
/**
 * Export private keys as a base64 string.
 *
 * Returns base64-encoded private key bytes (32 or 64), or NULL data if no
 * identity key is loaded.
 */
struct FfiResult chat_xdk_export_keys(const struct ChatHandle *handle);
/**
 * Import private keys from a base64 string.
 */
struct FfiResult chat_xdk_import_keys(const struct ChatHandle *handle, const char *keys_b64);
/**
 * Like `chat_xdk_import_keys` but also records the public key version the
 * keys were registered under, so participant-key filtering and the session
 * `signing_key_version` are set in one call.
 *
 * `keys` are the raw private key bytes (32 or 64) — no base64 transport
 * copy, so the caller-owned buffer is the only copy to wipe.
 */
struct FfiResult chat_xdk_import_keys_with_version(const struct ChatHandle *handle,
                                                   const uint8_t *keys,
                                                   uintptr_t keys_len,
                                                   const char *version);
/**
 * `events_json`: JSON array of base64-encoded event strings.
 * Returns JSON `{"keys":{version: key_b64,...},"latest_version": string|null}`.
 */
struct FfiResult chat_xdk_extract_conversation_keys(const struct ChatHandle *handle,
                                                    const char *events_json);
/**
 * Batch decrypt. `signing_keys_json`: `[{"user_id","public_key_version","public_key",
 * "identity_public_key","identity_public_key_signature"},...]`; an empty
 * array falls back to the keys stored via `chat_xdk_set_signing_keys`.
 */
struct FfiResult chat_xdk_decrypt_events(const struct ChatHandle *handle,
                                         const char *events_json,
                                         const char *signing_keys_json);
/**
 * Decrypt a webhook event.
 *
 * `event_b64`: Base64-encoded event from webhook.
 * `conversation_keys_json`: JSON object mapping version strings to base64-encoded
 *     raw conversation key bytes, from `extract_conversation_keys`. With "{}"
 *     the opt-in conversation-key cache (see `chat_xdk_set_cache_keys`) is
 *     consulted instead; pass "{}" for non-message events.
 * `signing_keys_json`: JSON array of `{"user_id","public_key_version","public_key",
 *     "identity_public_key","identity_public_key_signature"}`. An empty array
 *     falls back to the keys stored via `chat_xdk_set_signing_keys`; with
 *     nothing stored either, signed events fail decryption under the default
 *     reject-unverified policy (disable it via `chat_xdk_set_reject_unverified`
 *     to have them returned with `verified: false` instead).
 *
 * Returns JSON representation of the decrypted Event.
 */
struct FfiResult chat_xdk_decrypt_event(const struct ChatHandle *handle,
                                        const char *event_b64,
                                        const char *conversation_keys_json,
                                        const char *signing_keys_json);