crates/dotnet/dotnet/ChatXdk/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace ChatXdk
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "chat_xdk_dotnet";





        /// <summary>
        ///  Create a new Chat SDK instance.
        ///
        ///  Returns an opaque handle that must be freed with `chat_xdk_free`.
        ///  Returns NULL on allocation failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ChatHandle* chat_xdk_new();

        /// <summary>
        ///  Free a Chat SDK handle.
        ///
        ///  After this call the handle is invalid. Passing NULL is a no-op.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_free(ChatHandle* handle);

        /// <summary>
        ///  Free a string returned by any `chat_xdk_*` function.
        ///
        ///  The buffer is zeroized before it is freed: some returns carry secrets
        ///  (e.g. exported keys), so every returned string is wiped rather than
        ///  deciding per call site.
        ///
        ///  Passing NULL is a no-op.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_free_string(byte* s);

        /// <summary>
        ///  Returns 1 if both identity and signing keys are loaded, 0 if locked, -1 on null handle.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_is_unlocked", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int chat_xdk_is_unlocked(ChatHandle* handle);

        /// <summary>
        ///  Returns 1 if the identity key is loaded (sufficient for decryption), 0 if not, -1 on null handle.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_has_identity_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int chat_xdk_has_identity_key(ChatHandle* handle);

        /// <summary>
        ///  When `reject` is non-zero — the default — `chat_xdk_decrypt_event` returns
        ///  an error for any signed event whose signature cannot be verified (invalid,
        ///  missing, or no matching signing key) instead of returning it with
        ///  `verified: false`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_set_reject_unverified", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_set_reject_unverified(ChatHandle* handle, int reject);

        /// <summary>
        ///  Set the session identity: the owner's user id and signing-key version,
        ///  used as the defaults wherever a params document omits `sender_id` /
        ///  `signing_key_version`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_set_identity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_set_identity(ChatHandle* handle, byte* user_id, byte* signing_key_version);

        /// <summary>
        ///  Enable (non-zero) or disable (zero) the conversation-key cache (off by
        ///  default). While enabled, `chat_xdk_decrypt_events` caches, per
        ///  conversation, the key whose key change carried a valid signature at the
        ///  highest version seen, and the encrypt entry points resolve an omitted
        ///  `conversation_key`/`conversation_key_version` pair from it. Disabling
        ///  clears the cache.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_set_cache_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_set_cache_keys(ChatHandle* handle, int enabled);

        /// <summary>
        ///  Store signing keys to use when a decrypt call passes an empty
        ///  `signing_keys_json`. Only this explicit call populates the store — a key
        ///  carried inside an event is never trusted for verification. Each call
        ///  replaces the previous set.
        ///
        ///  `signing_keys_json`: same array shape as `chat_xdk_decrypt_events`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_set_signing_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_set_signing_keys(ChatHandle* handle, byte* signing_keys_json);

        /// <summary>
        ///  Lock the SDK, clearing all key material from memory.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_lock", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_lock(ChatHandle* handle);

        /// <summary>
        ///  Update the Juicebox configuration (e.g. to refresh short-lived auth tokens).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_update_config", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_update_config(ChatHandle* handle, byte* config_json);

        /// <summary>
        ///  Register the SDK's keys with Juicebox (first-time setup).
        ///
        ///  `config_json` is the Juicebox configuration from the X API.
        ///  Returns JSON `{"identity":"...","signing":"...","version":"..."}` on success.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_setup", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_setup(ChatHandle* handle, byte* pin, byte* config_json);

        /// <summary>
        ///  Recover keys from Juicebox and unlock the SDK.
        ///
        ///  `config_json` is the Juicebox configuration from the X API.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_unlock", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_unlock(ChatHandle* handle, byte* pin, byte* config_json);

        /// <summary>
        ///  Delete keys from Juicebox and lock the SDK.
        ///
        ///  Warning: Irreversible — the user will lose access to their encrypted history.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_delete", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_delete(ChatHandle* handle);

        /// <summary>
        ///  Re-register keys under a new PIN.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_change_pin", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_change_pin(ChatHandle* handle, byte* old_pin, byte* new_pin);

        /// <summary>
        ///  Generate new identity + signing keypairs.
        ///
        ///  Returns JSON matching `PublicKeyRegistrationPayload` for the X API.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_generate_keypairs", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_generate_keypairs(ChatHandle* handle);

        /// <summary>
        ///  Get the user's current public keys.
        ///
        ///  Returns JSON `{"identity":"...","signing":"...","version":"..."}`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_get_public_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_get_public_keys(ChatHandle* handle);

        /// <summary>
        ///  Get the fingerprint of the loaded identity public key.
        ///
        ///  Returns a URL-safe base64 string (SHA-256 of the SPKI-encoded key) for
        ///  out-of-band verification.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_get_public_key_fingerprint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_get_public_key_fingerprint(ChatHandle* handle);

        /// <summary>
        ///  Export private key material as a base64 string for secure backup.
        ///
        ///  Returns empty data (NULL `data` field) if no identity key is loaded.
        ///  Warning: Handle the result with extreme care — this is raw secret key material.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_export_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_export_keys(ChatHandle* handle);

        /// <summary>
        ///  Import private key material from a base64 string produced by `chat_xdk_export_keys`.
        ///
        ///  Accepts 32 bytes (identity only) or 64 bytes (identity + signing).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_import_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_import_keys(ChatHandle* handle, byte* keys_b64);

        /// <summary>
        ///  Like `chat_xdk_import_keys` but takes the raw key bytes and also records
        ///  the public key version the keys were registered under, so participant-key
        ///  filtering and the session `signing_key_version` are set in one call.
        ///
        ///  Accepts 32 bytes (identity only) or 64 bytes (identity + signing).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_import_keys_with_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_import_keys_with_version(ChatHandle* handle, byte* keys, nuint keys_len, byte* version);

        /// <summary>
        ///  Extract and decrypt conversation keys from raw KeyChange event strings.
        ///
        ///  `events_json` — JSON array of base64-encoded raw event strings from the webhook.
        ///
        ///  Returns JSON `{"keys":{"version":"base64_bytes",...},"latest_version":"..."|null}`.
        ///  Pass `keys` serialized as a flat map `{"version":"base64_bytes",...}` to `chat_xdk_decrypt_event`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_extract_conversation_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_extract_conversation_keys(ChatHandle* handle, byte* events_json);

        /// <summary>
        ///  Batch decrypt. `signing_keys_json`: `[{"user_id","public_key_version","public_key",
        ///  "identity_public_key","identity_public_key_signature"},...]`. An empty
        ///  array falls back to the keys stored via `chat_xdk_set_signing_keys`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_decrypt_events", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_decrypt_events(ChatHandle* handle, byte* events_json, byte* signing_keys_json);
